OpenGL: increase minimum to ES3 / 3.3 Compatibility / 4.1 Core

This is the second attempt of commit
ca645e71a09e1ee81dc0f7ef153b00304af058de. For this one, I've ported Qt's
dynamic OpenGL module detection (which we cannot run at this time due to
QGuiApplication having not yet been instanced), and split the minimum
version per-operating system flavor.

For all OpenGL ES users, the new version will be fixed to 3.0 +
QSurfaceFormat::NoProfile (already the default-- CompatibilityProfile
and DeprecatedFunctions are no-ops).

For desktop GL users not on macOS, the new version will be fixed to 3.3
Compatibility. While testing, I found that it was easy to induce a
"crash" (in fact, forced process exit by X11) by asking NVIDIA's GLX
implementation to instantiate a 4.x surface if it was set to GLES
(whether by setRenderableType or by using NoProfile). For that reason
I've kept the Compatibility profile but without DeprecatedFunctions--
that way the display driver returns the maximum supported version.

For all desktop OpenGL users on a Mac, we use the Apple default and sole
supported version, 4.1 Core.

This reverts commit fa671d407fd6d89c87c15c67d486e5dd1c7b0301.

BUG:464255
CCMAIL:kimageshop@kde.org

Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1726>